deploy/overlays/stable/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odya-api
spec:
  template:
    spec:
      containers:
        - name: odya-api
          resources:
            limits:
              cpu: 800m
              memory: 2048Mi
      nodeSelector:
        performance: high
