deploy/overlays/stable/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odya-api-ingress
  namespace: stable
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: jayden-bin.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odya-api-svc
            port:
              number: 80
  tls:
    - hosts:
        - jayden-bin.kro.kr
      secretName: star-jayden-bin-kro-kr
